--- a/public/resources/narrow.css
+++ b/public/resources/narrow.css
@@ -22,3 +22,10 @@ h1{
     margin: auto;
     text-align: center;
 }
+
+#footer {
+    color: #FFF;
+    text-align: center;
+    opacity: 0.5;
+    padding:1em;
+}
