--- a/public/resources/wide.css
+++ b/public/resources/wide.css
@@ -23,3 +23,11 @@ h1{
     margin: auto;
     text-align: center;
 }
+
+
+#footer {
+    color: #FFF;
+    text-align: center;
+    opacity: 0.5;
+    padding:1em;
+}
